ribbit/tests/ui/struct_nonzero.stderr
error: At least one field must be non-zero for struct to be non-zero
 --> tests/ui/struct_nonzero.rs:1:27
  |
1 | #[ribbit::pack(size = 32, nonzero)]
  |                           ^^^^^^^
