ribbit/tests/ui/struct_nonzero.rs
#[ribbit::pack(size = 32, nonzero)]
struct Bad(u32);

fn main() {}
